--- a/app/src/main/res/layout/dialog_lyric_test.xml
+++ b/app/src/main/res/layout/dialog_lyric_test.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="24dp"
     android:spacing="12dp">
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/test_app_name"
         app:layout_constraintTop_toTopOf="@+id/test_app_name">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             app:layout_constraintEnd_toStartOf="@+id/test_app_name_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         app:cardUseCompatPadding="false">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_play"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             app:layout_constraintEnd_toStartOf="@+id/test_app_play_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_play_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
         android:layout_marginBottom="12dp">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_lyric"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_lyric_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
         android:layout_marginBottom="12dp">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_icon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
             app:layout_constraintEnd_toStartOf="@+id/test_app_icon_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_icon_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -127,7 +127,7 @@
         android:layout_marginBottom="12dp">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_useOwnMusicController"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -137,7 +137,7 @@
             app:layout_constraintEnd_toStartOf="@+id/test_app_useOwnMusicController_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_useOwnMusicController_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
         android:layout_marginBottom="12dp">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_customIcon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -181,7 +181,7 @@
         android:layout_marginBottom="12dp">
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_delay"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -191,7 +191,7 @@
             app:layout_constraintEnd_toStartOf="@+id/test_app_delay_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/test_app_delay_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
