opt：优化设置界面

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,5 +36,6 @@
         <item>com.heytap.music</item>
         <item>com.oppo.music</item>
         <item>com.maxmpz.audioplayer</item>
+        <item>com.android.bbkmusic</item>
     </array>
 </resources>
