--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -17,7 +17,7 @@
             android:layout_height="?actionBarSize"
             app:layout_collapseMode="pin"
             app:navigationIcon="@drawable/ic_back"
-            app:title="@string/testlyric" />
+            app:title="@string/lyric_test" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -75,16 +75,13 @@
                         android:id="@+id/tips_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/testlyric_tips"
+                        android:text="@string/test_lyric_tips"
                         android:textSize="14sp" />
                 </LinearLayout>
-
-
-
-
             </LinearLayout>
 
         </ScrollView>
+
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
